--- a/.github/workflows/CSV_pipeline.yml
+++ b/.github/workflows/CSV_pipeline.yml
@@ -1,84 +1,52 @@
-name: CSV Pipeline
-
-
-
-on:
-
-  push:
-
+Nom: Pipeline CSV
+sur:
+  pousser:
     branches:
-
-      - main
-
+      - principal
   workflow_dispatch:
-    inputs:
-      env:
-        description: 'Sélectionner l’environnement'
-        required: true
-        default: 'dev'
+    entrées:
+      environnement:
+        description: Selectionner lenvironnement
+        requis: vrai
+        valeur par défaut: « dev »
+emplois:
+  pipeline csv:
+    fonctionne sous: ubuntu-latest
+    stratégie:
+      matrice:
+        env:
+          - dev
+          - test
+          - prod
+        version de Python:
+          - 3.1
+          - 3.11
+    mesures:
+      - nom: Dépôt de vérification
+        utilisations: actions/checkout@v3
+      - nom: Configurer Python
+        utilise: actions/setup-python@v4
+        avec:
+          version de Python: "3.11"
+      - nom: Installer les dépendances
+        exécuter: |
+          
+          python -m pip installer --mise à jour de pip
 
+          pip install pandas   # ou toute autre dépendance nécessaire
+      - nom: Exécuter le script Python pour ${{ matrix.env }}
+        exécuter: |
+          
+          si [ "${{ matrix.env }}" == "dev" ]; alors
 
-jobs:
+            scripts Python/csv_to_dev.py
 
-  csv_pipeline:
+          elif [ "${{ matrix.env }}" == "test" ]; alors
 
-    runs-on: ubuntu-latest
-
-
-
-    strategy:
-
-      matrix:
-
-        env: [dev, test, prod]
-	python-version: [3.10, 3.11]
-
-
-
-    steps:
-
-      - name: Checkout repository
-
-        uses: actions/checkout@v3
-
-
-
-      - name: Set up Python
-
-        uses: actions/setup-python@v4
-
-        with:
-
-          python-version: '3.11'
-
-
-
-      - name: Install dependencies
-
-        run: |
-
-          python -m pip install --upgrade pip
-
-          pip install pandas  # ou toute autre dépendance nécessaire
-
-
-
-      - name: Run Python script for ${{ matrix.env }}
-
-        run: |
-
-          if [ "${{ matrix.env }}" == "dev" ]; then
-
-            python scripts/csv_to_dev.py
-
-          elif [ "${{ matrix.env }}" == "test" ]; then
-
-            python scripts/csv_to_test.py
+            scripts Python/csv_to_test.py
 
           elif [ "${{ matrix.env }}" == "prod" ]; then
 
-            python scripts/csv_to_prod.py
+            scripts Python/csv_to_prod.py
 
           fi
-
-	 
